--- a/src/main/webapp/resources/sass/_bootstrap-variables.scss
+++ b/src/main/webapp/resources/sass/_bootstrap-variables.scss
@@ -13,17 +13,16 @@
 //
 //## Gray and brand colors for use across Bootstrap.
 
-// $gray-darker:            lighten(#000, 13.5%) // #222
-// $gray-dark:              lighten(#000, 20%)   // #333
-// $gray:                   lighten(#000, 33.5%) // #555
-// $gray-light:             lighten(#000, 46.7%) // #777
-// $gray-lighter:           lighten(#000, 93.5%) // #eee
-
-// $brand-primary:         #428bca
-// $brand-success:         #5cb85c
-// $brand-info:            #5bc0de
-// $brand-warning:         #f0ad4e
-// $brand-danger:          #d9534f
+ $gray-darker:            lighten(#000, 13.5%); // #222
+ $gray-dark:              lighten(#000, 20%) ;  // #333
+ $gray:                   lighten(#000, 33.5%); // #555
+ $gray-light:             lighten(#000, 46.7%); // #777
+ $gray-lighter:           lighten(#000, 93.5%) ;// #eee
+ $brand-primary:         #428bca;
+ $brand-success:         #5cb85c;
+ $brand-info:            #5bc0de;
+ $brand-warning:         #f0ad4e;
+ $brand-danger:          #d9534f;
 
 //== Scaffolding
 //
@@ -331,7 +330,8 @@
 //##
 
 // Basics of a navbar
-// $navbar-height:                    50px
+// $navbar-height:                    50px\
+$navbar-height:                    60px;
 // $navbar-margin-bottom:             $line-height-computed
 // $navbar-border-radius:             $border-radius-base
 // $navbar-padding-horizontal:        floor(($grid-gutter-width / 2))
