--- a/src/main/webapp/resources/stylesheets/styles.css
+++ b/src/main/webapp/resources/stylesheets/styles.css
@@ -1376,7 +1376,7 @@ tbody.collapse.in { display: table-row-group; }
 
 .nav-tabs .dropdown-menu { margin-top: -1px; border-top-right-radius: 0; border-top-left-radius: 0; }
 
-.navbar { position: relative; min-height: 80px; margin-bottom: 20px; border: 1px solid transparent; }
+.navbar { position: relative; min-height: 60px; margin-bottom: 20px; border: 1px solid transparent; }
 .navbar:before, .navbar:after { content: " "; display: table; }
 .navbar:after { clear: both; }
 @media (min-width: 768px) { .navbar { border-radius: 4px; } }
@@ -1410,17 +1410,17 @@ tbody.collapse.in { display: table-row-group; }
 
 .navbar-fixed-bottom { bottom: 0; margin-bottom: 0; border-width: 1px 0 0; }
 
-.navbar-brand { float: left; padding: 30px 15px; font-size: 18px; line-height: 20px; height: 80px; }
+.navbar-brand { float: left; padding: 20px 15px; font-size: 18px; line-height: 20px; height: 60px; }
 .navbar-brand:hover, .navbar-brand:focus { text-decoration: none; }
 @media (min-width: 768px) { .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand { margin-left: -15px; } }
 
-.navbar-toggle { position: relative; float: right; margin-right: 15px; padding: 9px 10px; margin-top: 23px; margin-bottom: 23px; background-color: transparent; background-image: none; border: 1px solid transparent; border-radius: 4px; }
+.navbar-toggle { position: relative; float: right; margin-right: 15px; padding: 9px 10px; margin-top: 13px; margin-bottom: 13px; background-color: transparent; background-image: none; border: 1px solid transparent; border-radius: 4px; }
 .navbar-toggle:focus { outline: 0; }
 .navbar-toggle .icon-bar { display: block; width: 22px; height: 2px; border-radius: 1px; }
 .navbar-toggle .icon-bar + .icon-bar { margin-top: 4px; }
 @media (min-width: 768px) { .navbar-toggle { display: none; } }
 
-.navbar-nav { margin: 15px -15px; }
+.navbar-nav { margin: 10px -15px; }
 .navbar-nav > li > a { padding-top: 10px; padding-bottom: 10px; line-height: 20px; }
 @media (max-width: 767px) { .navbar-nav .open .dropdown-menu { position: static; float: none; width: auto; margin-top: 0; background-color: transparent; border: 0; box-shadow: none; }
   .navbar-nav .open .dropdown-menu > li > a, .navbar-nav .open .dropdown-menu .dropdown-header { padding: 5px 15px 5px 25px; }
@@ -1428,12 +1428,12 @@ tbody.collapse.in { display: table-row-group; }
   .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-nav .open .dropdown-menu > li > a:focus { background-image: none; } }
 @media (min-width: 768px) { .navbar-nav { float: left; margin: 0; }
   .navbar-nav > li { float: left; }
-  .navbar-nav > li > a { padding-top: 30px; padding-bottom: 30px; }
+  .navbar-nav > li > a { padding-top: 20px; padding-bottom: 20px; }
   .navbar-nav.navbar-right:last-child { margin-right: -15px; } }
 
 @media (min-width: 768px) { .navbar-left { float: left !important; }
   .navbar-right { float: right !important; } }
-.navbar-form { margin-left: -15px; margin-right: -15px; padding: 10px 15px; border-top: 1px solid transparent; border-bottom: 1px solid transparent; -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1); margin-top: 23px; margin-bottom: 23px; }
+.navbar-form { margin-left: -15px; margin-right: -15px; padding: 10px 15px; border-top: 1px solid transparent; border-bottom: 1px solid transparent; -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1); margin-top: 13px; margin-bottom: 13px; }
 @media (max-width: 767px) { .navbar-form .form-group { margin-bottom: 5px; } }
 @media (min-width: 768px) { .navbar-form { width: auto; border: 0; margin-left: 0; margin-right: 0; padding-top: 0; padding-bottom: 0; -webkit-box-shadow: none; box-shadow: none; }
   .navbar-form.navbar-right:last-child { margin-right: -15px; } }
@@ -1442,11 +1442,11 @@ tbody.collapse.in { display: table-row-group; }
 
 .navbar-fixed-bottom .navbar-nav > li > .dropdown-menu { border-bottom-right-radius: 0; border-bottom-left-radius: 0; }
 
-.navbar-btn { margin-top: 23px; margin-bottom: 23px; }
-.navbar-btn.btn-sm, .btn-group-sm > .navbar-btn.btn { margin-top: 25px; margin-bottom: 25px; }
-.navbar-btn.btn-xs, .btn-group-xs > .navbar-btn.btn { margin-top: 29px; margin-bottom: 29px; }
+.navbar-btn { margin-top: 13px; margin-bottom: 13px; }
+.navbar-btn.btn-sm, .btn-group-sm > .navbar-btn.btn { margin-top: 15px; margin-bottom: 15px; }
+.navbar-btn.btn-xs, .btn-group-xs > .navbar-btn.btn { margin-top: 19px; margin-bottom: 19px; }
 
-.navbar-text { margin-top: 30px; margin-bottom: 30px; }
+.navbar-text { margin-top: 20px; margin-bottom: 20px; }
 @media (min-width: 768px) { .navbar-text { float: left; margin-left: 15px; margin-right: 15px; }
   .navbar-text.navbar-right:last-child { margin-right: 0; } }
 
@@ -2002,6 +2002,43 @@ button.close { padding: 0; cursor: pointer; background: transparent; border: 0; 
 @media print { .visible-print-inline-block { display: inline-block !important; } }
 
 @media print { .hidden-print { display: none !important; } }
+/* Base structure */
+/* Move down content because we have a fixed navbar that is 50px tall */
+#dashboard-body { padding-top: 60px; }
+
+/* Global add-ons */
+.sub-header { padding-bottom: 10px; border-bottom: 1px solid #eee; }
+
+/* Top navigation Hide default border to remove 1px line. */
+.navbar-fixed-top { border: 0; }
+
+/* Sidebar */
+/* Hide for mobile, show later */
+.sidebar { display: none; }
+
+@media (min-width: 768px) { .sidebar { position: fixed; top: 51px; bottom: 0; left: 0; z-index: 1000; display: block; padding: 20px; overflow-x: hidden; overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */ background-color: #f5f5f5; border-right: 1px solid #eee; } }
+/* Sidebar navigation */
+.nav-sidebar { margin-right: -21px; /* 20px padding + 1px border */ margin-bottom: 20px; margin-left: -20px; }
+
+.nav-sidebar > li > a { padding-right: 20px; padding-left: 20px; }
+
+.nav-sidebar > .active > a, .nav-sidebar > .active > a:hover, .nav-sidebar > .active > a:focus { color: #fff; background-color: #428bca; }
+
+/* Dashboard Main content */
+.dashboard-main { padding: 20px; }
+
+@media (min-width: 768px) { .main { padding-right: 40px; padding-left: 40px; } }
+.dashboard-main .page-header { margin-top: 0; }
+
+/* Placeholder dashboard ideas */
+.placeholders { margin-bottom: 30px; text-align: center; }
+
+.placeholders h4 { margin-bottom: 0; }
+
+.placeholder { margin-bottom: 20px; }
+
+.placeholder img { display: inline-block; border-radius: 50%; }
+
 @media (min-width: 992px) { #nav-search { min-width: 300px; } }
 @media (min-width: 1200px) { #nav-search { min-width: 550px; } }
 .golden-star { color: #ffcc00; }
