--- a/src/main/webapp/WEB-INF/templates/admin.template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/admin.template.xhtml
@@ -101,7 +101,7 @@
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 dashboard-main">
                     <div id="content">
                         
-                        
+                        <h3>Name: #{memberSessionBean.firstname()}</h3>
                         <ui:insert name='content' />
                         
                         
