--- a/src/main/webapp/WEB-INF/templates/bookstore.template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/bookstore.template.xhtml
@@ -63,9 +63,10 @@
                                 </h:link>
                             </li>
                             <li>
-                                <h:link outcome="#{memberSessionBean.logout()}" rendered="#{not empty request.remoteUser}">
-                                     Logout
-                                </h:link>
+
+                                <!--<h:link outcome="#{memberSessionBean.logout()}">-->
+                                     <!--Logout-->
+                                <!--</h:link>-->
                             </li>
 
                         </ul>
@@ -77,7 +78,7 @@
 
 
         <main class="container">
-            <h3>#{memberSessionBean.firstname()}</h3>
+            <h3>Name: #{memberSessionBean.firstname()}</h3>
             <div id="content" class="center_content" >
                 <ui:insert name="content" />
             </div>
