--- a/src/main/webapp/WEB-INF/sass/styles.scss
+++ b/src/main/webapp/WEB-INF/sass/styles.scss
@@ -6,7 +6,50 @@ main {
 $login-form-background-top: #eeeeee;
 $login-form-background-bottom: #ffffff;
 
+/*
+ * Off Canvas
+ * --------------------------------------------------
+ */
+@media screen and (max-width: 992px) {
+  .row-offcanvas {
+    position: relative;
+    -webkit-transition: all .25s ease-out;
+    -o-transition: all .25s ease-out;
+    transition: all .25s ease-out;
+  }
 
+  .row-offcanvas-right {
+    right: 0;
+  }
+
+  .row-offcanvas-left {
+    left: 0;
+  }
+
+  .row-offcanvas-right
+  .sidebar-offcanvas {
+    right: -50%; /* 6 columns */
+  }
+
+  .row-offcanvas-left
+  .sidebar-offcanvas {
+    left: -50%; /* 6 columns */
+  }
+
+  .row-offcanvas-right.active {
+    right: 50%; /* 6 columns */
+  }
+
+  .row-offcanvas-left.active {
+    left: 50%; /* 6 columns */
+  }
+
+  .sidebar-offcanvas {
+    position: absolute;
+    top: 0;
+    width: 50%; /* 6 columns */
+  }
+}
 //---------BOOTSTRAP DASHBOARD----
 /*
  * Base structure
@@ -41,7 +84,7 @@ $login-form-background-bottom: #ffffff;
     .sidebar {
       display: none;
     }
-    @media (min-width: 768px) {
+    @media (min-width: 992px) {
       .sidebar {
         position: fixed;
         top: 51px;
