--- a/src/main/webapp/WEB-INF/templates/scripts.xhtml
+++ b/src/main/webapp/WEB-INF/templates/scripts.xhtml
@@ -5,12 +5,12 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        
+
+        <h:outputScript library="javascripts" name="jquery.js" />
         <h:outputScript library="javascripts" name="bootstrap.js" />
         <h:outputScript library="javascripts" name="vue.js" />
         <h:outputScript library="javascripts" name="entities.js" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.0.3/vue-resource.min.js"></script>
+        <h:outputScript library="javascripts" name="vue-resource.js" />
         <ui:insert name="scripts" />
 
 </div>
