--- a/src/main/webapp/WEB-INF/templates/bookstore.template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/bookstore.template.xhtml
@@ -16,79 +16,10 @@
 
     <h:body>
         <header>
-            <nav class="navbar navbar-inverse" role="navigation">
-                <div class="container">
-
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapsible">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <h:link class="navbar-brand" outcome="/index" value="Dukes Bookstore"></h:link>
-                    </div>
-
-                    <div class="navbar-collapse collapse" id="navbar-collapsible">
-
-                        <ul class="nav navbar-nav navbar-left">
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Shop <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li class="dropdown-header">Categories</li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="">Fiction</a></li>
-                                    <li><a href="">Non-Fiction</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="sales/List.xhtml">Member Sales</a></li>
-                            <li>
-                                <form class="navbar-form navbar-nav">
-                                    <div class="form-group">
-                                        <div class="input-group">
-                                            <input id="nav-search" type="text" class="form-control" placeholder="Title, Author, Genre, ISBN"></input>
-                                            <span class="input-group-btn"><button class="btn btn-default" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>    </span>
-                                        </div>
-                                    </div>
-                                </form>
-                            </li>
-
-                            <li>
-                                <h:link outcome="/bookshowcart" rendered="#{!memberSession.admin}">
-                                    <i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart
-                                </h:link>
-                            </li>
-
-                            <li>
-                                <h:link outcome="/login" rendered="#{!memberSession.loggedIn}"><i class="fa fa-sign-in" aria-hidden="true"></i> Login </h:link>
-                            </li>
-
-
-                            <c:if test="#{memberSession.loggedIn}">
-                                <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                #{memberSession.firstname}  <span class="caret"></span>
-                                </a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <h:link outcome="/dashboard" rendered="#{memberSession.customer}"><i class="fa fa-dashboard" aria-hidden="true"></i> Dashboard</h:link>
-                                            <h:link outcome="/admin/activity-summary" rendered="#{memberSession.admin}"><i class="fa fa-dashboard" aria-hidden="true"></i> Admin</h:link>
-                                        </li>
-                                        <li>
-                                            <h:form>
-                                                <h:commandLink action="#{memberSession.logout}"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</h:commandLink>
-                                            </h:form>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </c:if>
-                        </ul>
-                    </div>
-
-                </div>
-                </nav>
+        <nav class="navbar navbar-inverse" role="navigation">
+            <ui:include src="navbar.xhtml" />
+        </nav>
         </header>
-
 
         <main class="container">
             <div id="content" class="center_content" >
