--- a/src/main/webapp/WEB-INF/templates/admin.template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/admin.template.xhtml
@@ -5,12 +5,12 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <head id="j_idt2">
+    <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link rel="stylesheet" type="text/css" href="#{request.contextPath}/resources/stylesheets/styles.css" />
-
-        <title>#{bundle.BookstoreTitle} - ADMINISTRATOR CONTROL PANEL</title></head>
+        <title>#{bundle.BookstoreTitle} - ADMINISTRATOR CONTROL PANEL</title></h:head>
+        
         <body id="dashboard-body">
 
 
@@ -79,7 +79,9 @@
                             <h:link value="Add Book" outcome="add-new-book" />
                         </li>
                         <li><a href="">Modify Book</a></li>
-                        <li><a href="">Add Stock</a></li>
+                        <li class="#{view.viewId.equals('/admin/add-stock.xhtml') ? 'active' : ''}}">
+                            <h:link value="Add Stock" outcome="add-stock" />
+                        </li>
                     </ul>
                     <ul class="nav nav-sidebar">
                         <li class="nav-divider"></li>
