working on shop

--- a/src/main/webapp/WEB-INF/sass/styles.scss
+++ b/src/main/webapp/WEB-INF/sass/styles.scss
@@ -194,7 +194,7 @@ $login-form-background-bottom: #ffffff;
 
 
 //--------- CUSTOM CSS -----------
-@media (min-width: 992px){
+/*@media (min-width: 992px){
     #nav-search {
         min-width: 300px;
     }
@@ -203,7 +203,7 @@ $login-form-background-bottom: #ffffff;
     #nav-search {
         min-width: 550px;
     }
-}
+}*/
 
 .golden-star {
     color: #ffcc00;
