--- a/src/main/webapp/WEB-INF/templates/scripts.xhtml
+++ b/src/main/webapp/WEB-INF/templates/scripts.xhtml
@@ -4,7 +4,8 @@
 <div lang="#{localeBean.language}"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
         <h:outputScript library="javascripts" name="jquery.js" />
         <h:outputScript library="javascripts" name="bootstrap.js" />
