Working on cart and checkout

--- a/src/main/webapp/WEB-INF/sass/styles.scss
+++ b/src/main/webapp/WEB-INF/sass/styles.scss
@@ -33,6 +33,13 @@ main {
 	
 }
 
+.cart-table {
+	td{
+			vertical-align: middle !important;	
+
+	}
+}
+
 //--------CUSTOM VARIABLES--------
 
 $login-form-background-top: #eeeeee;
