--- a/src/main/webapp/WEB-INF/templates/navbar.xhtml
+++ b/src/main/webapp/WEB-INF/templates/navbar.xhtml
@@ -81,7 +81,7 @@
 
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<h:link outcome="/bookshowcart" rendered="#{!memberSession.admin}">
+					<h:link outcome="/cart" rendered="#{!memberSession.admin}">
 						<i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i>
 						<span class="badge" id="cart-item-count">
 							#{cart.numberOfItems()}
