--- a/src/main/webapp/WEB-INF/templates/navbar.xhtml
+++ b/src/main/webapp/WEB-INF/templates/navbar.xhtml
@@ -39,7 +39,7 @@
 						</ui:repeat>
 					</ul>
 				</li>
-				<li><a href="sales/List.xhtml">Member Sales</a></li>
+				<li><a href="salesList.xhtml">Member Sales</a></li>
 				<li style="min-width: 500px;">
 					<h:form class="navbar-form navbar-nav">
 
